@@ -39,6 +39,8 @@ GType     xfce_volume_button_get_type       (void) G_GNUC_CONST;
 
 GtkWidget *xfce_volume_button_new           (void);
 
+void       xfce_volume_button_set_muted     (XfceVolumeButton *button,
+                                             gboolean          muted);
 void       xfce_volume_button_set_volume    (XfceVolumeButton *button,
                                              gdouble           volume);
 void       xfce_volume_button_update        (XfceVolumeButton *button);
